--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,35 @@
-name: "orthodox_prayers"
-on: [push, pull_request]
+name: Build Flipper Application Package (.fap)
+
+# Trigger the workflow on pushes or pull requests to main (adjust as needed)
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
-  ufbt-build-action:
+  build-fap:
     runs-on: ubuntu-latest
-    name: 'ufbt: Build for Dev branch'
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Build with ufbt
-        uses: flipperdevices/flipperzero-ufbt-action@v0.1
-        id: build-app
+
+      - name: Build & package .fap with uFBT
+        id: ufbt_build
+        uses: flipperdevices/flipperzero-ufbt-action@v0.1.3
         with:
-          # Set to 'release' to build for latest published release version
-          sdk-channel: dev
-      - name: Upload app artifacts
+          # Choose the SDK channel you want to build against:
+          #  • dev   latest development build
+          #  • release  latest stable release
+          #  • The action also supports custom SDK URLs (see docs)
+          sdk-channel: release
+
+      - name: Upload .fap artifact
+        if: ${{ steps.ufbt_build.outputs.fap-artifacts != '' }}
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ github.event.repository.name }}-${{ steps.build-app.outputs.suffix }}
-          path: ${{ steps.build-app.outputs.fap-artifacts }}
-      # You can remove this step if you don't want to check source code formatting
-      - name: Lint sources
-        uses: flipperdevices/flipperzero-ufbt-action@v0.1
-        with:
-          # skip SDK setup, we already did it in previous step
-          skip-setup: true
-          task: lint
+          name: orthodox_prayers_fap
+          path: ${{ steps.ufbt_build.outputs.fap-artifacts }}
