--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,5 @@
 name: Build Flipper Application Package (.fap)
 
-# Trigger the workflow on pushes or pull requests to main (adjust as needed)
 on:
   push:
     branches:
@@ -14,22 +13,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1) Check out your code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Build & package .fap with uFBT
+      # 2) Build your .fap with uFBT (this auto‐installs the SDK & runs `ufbt build`)
+      - name: Build .fap with uFBT
         id: ufbt_build
         uses: flipperdevices/flipperzero-ufbt-action@v0.1.3
         with:
-          # Choose the SDK channel you want to build against:
-          #  • dev   latest development build
-          #  • release  latest stable release
-          #  • The action also supports custom SDK URLs (see docs)
           sdk-channel: release
+          # (If you want to skip the lint step, add `task: build` here.)
 
+      # 3) Upload the .fap as a downloadable artifact
       - name: Upload .fap artifact
         if: ${{ steps.ufbt_build.outputs.fap-artifacts != '' }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: orthodox_prayers_fap
           path: ${{ steps.ufbt_build.outputs.fap-artifacts }}
